--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -63,7 +63,59 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>One Threed</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButtonTwoThreed">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>140</y>
+      <width>80</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Two Threed</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButtonFourThreed">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>190</y>
+      <width>80</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>four Thread</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="TwoThreedLabel">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>140</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="FourThreedLabel">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>190</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
