--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>538</width>
+    <height>510</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="InitArrrayButton">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>30</y>
+      <x>70</x>
+      <y>80</y>
       <width>80</width>
       <height>21</height>
      </rect>
@@ -30,8 +30,8 @@
    <widget class="QLabel" name="labelArrayIsReady">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>30</y>
+      <x>180</x>
+      <y>80</y>
       <width>61</width>
       <height>21</height>
      </rect>
@@ -43,8 +43,8 @@
    <widget class="QLabel" name="labelSeqMultyResult">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>80</y>
+      <x>190</x>
+      <y>130</y>
       <width>71</width>
       <height>21</height>
      </rect>
@@ -56,8 +56,8 @@
    <widget class="QPushButton" name="buttonSeqMulty">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>80</y>
+      <x>70</x>
+      <y>130</y>
       <width>80</width>
       <height>21</height>
      </rect>
@@ -69,8 +69,8 @@
    <widget class="QPushButton" name="pushButtonTwoThreed">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>140</y>
+      <x>70</x>
+      <y>190</y>
       <width>80</width>
       <height>21</height>
      </rect>
@@ -82,8 +82,8 @@
    <widget class="QPushButton" name="pushButtonFourThreed">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>190</y>
+      <x>70</x>
+      <y>240</y>
       <width>80</width>
       <height>21</height>
      </rect>
@@ -95,10 +95,10 @@
    <widget class="QLabel" name="TwoThreedLabel">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>140</y>
-      <width>47</width>
-      <height>13</height>
+      <x>200</x>
+      <y>182</y>
+      <width>81</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -108,8 +108,138 @@
    <widget class="QLabel" name="FourThreedLabel">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>190</y>
+      <x>200</x>
+      <y>222</y>
+      <width>71</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelSeqSumOldC">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>130</y>
+      <width>61</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>20</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>QT</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>20</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>C++</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>70</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>300</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Eight thread(test)</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_EightQt">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>292</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>370</y>
+      <width>101</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>SixTeen Thread</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>382</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonConcurrent">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>450</y>
+      <width>91</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Concurrent run</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelConcurrent">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>460</y>
       <width>47</width>
       <height>13</height>
      </rect>
